Fixed placeholder text to align better

--- a/static/style.css
+++ b/static/style.css
@@ -852,7 +852,7 @@ main#search-page {
         background: none;
       }
 
-      ::placeholder, input[type="date"] {
+      input[type="date"] {
         text-align: center;
       }
     }
